Chapter05/kubia-svc-client-ip-session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: seino
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: seino
