Chapter05/kubia-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: seino-headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: seino
