Chapter05/kubia-svc-publish-not-ready.yaml
apiVersion: v1
kind: Service
metadata:
  name: seino-all
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: seino
  publishNotReadyEndpoints: true
