Chapter05/kubia-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: seino
spec:
  tls:
  - hosts: 
    - seino.example.com
    secretName: tls-secret
  rules:
  - host: seino.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: seino-nodeport
          servicePort: 80
