Chapter05/kubia-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: seino
spec:
  rules:
  - host: seino.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: seino-nodeport
          servicePort: 80
